--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -1,12 +1,14 @@
 \chapter{Results}
 \section{Six DOF Stewart Platform}
-For the dimensions already discussed, a Stewart Platform with 6 degrees of freedom was designed and assembled as shown in figure 4.1.1.
-Stewart platform assembly will be used to position a model under testing in the middle of the Wind Tunnel's test section.
+As earlier mentioned, the Stewart platform has already been designed and fabricated and our part in this work was to do an evaluation of the same to verify its mechanical feasibility. As such, the various parts of the platform were obtained and assembled. For further analysis, a 3D model of the same platform was done using Autodesk Inventor.
+
+The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1} shows the Stewart platform configuration setup with the Wind tunnel's test section.
 \begin{center}
 	\begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Assembly}
 	\caption[Assembled Platform]{Assembly of Stewart Platform}
+	\label{fig}
 	\end{figure}
 \end{center}
 \begin{center}
@@ -14,6 +16,7 @@ Stewart platform assembly will be used to position a model under testing in the 
 	\centering
 	\includegraphics[width=0.8\linewidth]{Figures/Test-section}
 	\caption[Model placement in Test Section]{Stewart platform and Test section configuration}
+	\label{fig1}
 	\end{figure}
 \end{center}
 \clearpage
