Changes in Methodology and results

--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -19,7 +19,15 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 	\label{fig1}
 	\end{figure}
 \end{center}
-Assembling the Stewart platform legs as shown in \ref{fig} makes it easier to achieve the six degrees of freedom as opposed to having two legs on the attached on the same flange.
+Assembling the Stewart platform legs as shown in \ref{fig} makes it easier to achieve the six degrees of freedom as opposed to having two legs on the attached on the same flange as in figure \ref{fig2}.
+\begin{center}
+\begin{figure}[!htb]
+\centering
+\includegraphics[width=0.3\linewidth]{Figures/assembly2}
+\caption[Stewart platform assembly]{Stewart platform alternative assembly}
+\label{fig2}
+\end{figure}
+\end{center}
 \subsection{Stewart Platform Simulation}
 Stewart Platform simulation was done on MatLab using the Inverse kinematics equations. Different servo angles for different platform movements can be obtained from the simulation. The angles for yaw, pitch and roll could be adjusted during simulations to predict the maximum allowable angle values. Value of displacement in the x-, y- and z-directions could also be adjusted enabling us to predict the maximum allowable displacement in the respective directions.
 \begin{center}
