--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -437,17 +437,96 @@ The Servo motor \textbf{TowerPro SG5010} is suitable for this project. The speci
 \hline
 \end{tabular}
 \end{center}
-Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}.
-\section{Finite Element Analysis}
-A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
+Prices range between \textbf{Ksh.700} and \textbf{Ksh.1400}
+\section{Inverse Kinematics of a Stewart Platform}
+This is the calculation of each leg length based on the desired position of the Stewart platform. 
+For the Stewart platform, the translation $^{p}T_{b}$ from the base origin to the platform origin can be described with a single vector T = $(t_{x} t_{y} t_{z})^{T} $. The rotation of the platform can be denoted as $^{p}R_{b}$. Thus the following relationship for the frame of reference can be stated:
+$$^{p}T_{b} = T$$
+	$$^{p}R_{b} = R$$
+	$$^{b}T_{p} =(^{p}T_{b})^{-1} =T^{-1}$$
+	$$^{b}R_{p} = (^{p}R_{b})^{-1} $$
 \begin{center}
-	\begin{figure}[!htb]
+	\begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.75\linewidth]{Figures/Von}
-	\caption[Von Mise's Stress]{Von Mise's Stress}
+	\includegraphics[width=0.4\linewidth]{Figures/servo2}
+	\caption{Leg Length}
 	\end{figure}
 \end{center}
+The leg length $l_{k}$ can therefore be found with:
+\begin{equation}
+l_{k} = P_{k} - B_{k} = T + R \times p \times R^{-1} - b_{k}
+\end{equation}
+\subsection{Inverse Kinematics Using Rotational Servo Motors}
+For a rod of fixed length d between servo horn anchor $H_{k}$ and platform anchor $P_{k}$.  $H_{k}$ has a distance h between the original base anchor and servo shaft $B_{k}$. The vector h is perpendicular to the servo shaft and is rotated by angle $\alpha_{k}$ when lifted from the horizontal line.
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{Figures/servo}
+	\caption{Servo angle}
+	\end{figure}
+\end{center}
+Further, looking from the top onto the base, each servo can be rotated by the angle $\beta_{k}$ in addition to its position $B_{k}$. The servo shaft $s_{k}$ moves in the x-y plane and is orthogonal to the vector h.
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.4\linewidth]{Figures/servo1}
+	\caption{Planar view}
+	\end{figure}
+\end{center}
+The anchor $H_{k}$ can be calculated as we rotate around the z-axis with angle $\beta_{k}$ and  by $-\alpha_{k}$ around the y-axis to lift the servo horn which lies in the local x-axis.
+\begin{equation}
+H_{k} = B_{k} + R_{z}(\beta_{k}) R_{y}(-\alpha_{k})\begin{pmatrix}
+|h|\\ 0 \\ 0
+\end{pmatrix}
+\label{eq:myeqn2}
+\end{equation}
+\begin{equation}
+ = B_{k} + |h|\begin{pmatrix}
+cos(\alpha_{k})cos(\beta_{k})\\
+ cos(\alpha_{k})sin(\beta_{k})\\
+  sin(\alpha_{k})
+\end{pmatrix}
+\label{eq:myeqn2}
+\end{equation}
+Carrying out the same procedure but with the servo arm when it is on the opposite side and we have:
+\begin{equation}
+H_{k} = B_{k} + R_{z}(\beta_{k}) R_{y}(\pi -\alpha_{k})\begin{pmatrix}
+-|h|\\ 0 \\ 0
+\end{pmatrix}
+\label{eq:myeqn2}
+\end{equation}
+\begin{equation}
+ = B_{k} + |h|\begin{pmatrix}
+cos(\alpha_{k})cos(\beta_{k})\\
+ cos(\alpha_{k})sin(\beta_{k})\\
+  sin(\alpha_{k})
+\end{pmatrix}
+\label{eq:myeqn2}
+\end{equation}
+Squaring the lengths of h, d, $l_{k}$ we get the relationship:
+$$h^2 = (H_{k}-B_{k})^{T}(H_{k}-B_{k})$$
+$$d^2 = (P_{k}-H_{k})^{T}(P_{k}-H_{k})$$
+$$l_{k}^2 = (P_{k}-B_{k})^{T}(P_{k}-B_{k})$$
+From the above relationships, further derivation and trigonometric substitutions are done to obtain the inverse kinematics used to calculate each servo angle. This is given as:
+\begin{equation}
+\alpha_{k} = sin^{-1}(\frac{g_{k}}{\sqrt{e_{k}^2+f_{k}^2}})-arctan2(f_{k}, e_{k})
+\end{equation}
+Where,
+$$e_{k} = 2hl_{k}^{(z)} $$
+$$e_{k} = 2h(cos(\beta_{k})I_{k}^{(x)}+sin({\beta_{k}})I_{k}^(y))$$
+$$g_{k} = l_{k}^2 - (d^2 - h^2)   $$
+
+\section{Finite Element Analysis}
+A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered.
+%\begin{center}
+	%\begin{figure}[!htb]
+	%\centering
+	%\includegraphics[width=0.75\linewidth]{Figures/Von}
+	%\caption[Von Mise's Stress]{Von Mise's Stress}
+	%\end{figure}
+%\end{center}
 The rods/legs of the Stewart platform are subjected to axial forces which cause slight strains which can be used to obtain force and moment measurements during wind tunnel testing.
+
 \section{Design of the Force Sensor}
 The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
 \begin{itemize}
